--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sweet Treats</title>
 </head>
 <body>
-    
+    <h1>This will be a sweets store</h1>
 <!-- linking the javascript file -->
     <script src="script.js"></script>
 </body>
