--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>This will be a sweets store</h1>
+    <h2>Just a test</h2>
 <!-- linking the javascript file -->
     <script src="script.js"></script>
 </body>
