--- a/index.html
+++ b/index.html
@@ -1,16 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Sweet Treats</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>This will be a sweets store</h1>
     <h2>Just a test</h2>
-<!-- linking the javascript file -->
+
+    <section id="itemsGrid">
+      <div class="cards">
+        <div class="card">
+          <img
+            class="itemImage"
+            src="https://images.pexels.com/photos/808941/pexels-photo-808941.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+            alt=""
+          />
+          <div class="itemName">
+            <p>Macarons</p>
+            <p>10</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="itemImage"
+            src="https://images.pexels.com/photos/33715/cake-pops-pastries-cake-sweet.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+            alt=""
+          />
+          <div class="itemName">
+            <p>Cake Pops</p>
+            <p>10</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="itemImage"
+            src="https://images.unsplash.com/photo-1486427944299-d1955d23e34d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+            alt=""
+          />
+          <div class="itemName">
+            <p>Cupcakes</p>
+            <p>10</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            class="itemImage"
+            src="https://images.pexels.com/photos/3026810/pexels-photo-3026810.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            alt=""
+          />
+          <div class="itemName">
+            <p>Parfait</p>
+            <p>10</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="itemImage"
+            src="https://images.pexels.com/photos/302899/pexels-photo-302899.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            alt=""
+          />
+          <div class="itemName">
+            <p>Coffee</p>
+            <p>10</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="itemImage"
+            src="https://images.pexels.com/photos/205961/pexels-photo-205961.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+            alt=""
+          />
+          <div class="itemName">
+            <p>Assorted Pastries</p>
+            <p>10</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="itemImage"
+            src="https://images.pexels.com/photos/808941/pexels-photo-808941.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+            alt=""
+          />
+          <div class="itemName">
+            <p>Macarons</p>
+            <p>10</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="itemImage"
+            src="https://images.pexels.com/photos/33715/cake-pops-pastries-cake-sweet.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+            alt=""
+          />
+          <div class="itemName">
+            <p>Cake Pops</p>
+            <p>10</p>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            class="itemImage"
+            src="https://images.unsplash.com/photo-1486427944299-d1955d23e34d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+            alt=""
+          />
+          <div class="itemName">
+            <p>Cupcakes</p>
+            <p>10</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- linking the javascript file -->
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
