--- a/index.html
+++ b/index.html
@@ -1,16 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">    
-    <title>Sweet Treats</title>
+  <!-- Meta -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="styles.css">
+  <title>Sweet Treats</title>
+
+  <!-- CSS -->
+  <link href="./resources/css/normalize.css" type="text/css" rel="stylesheet">
+  <link href="./resources/css/styles.css" rel="stylesheet" type="text/css">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@500&display=swap" rel="stylesheet"> 
+
+  <!-- Font Awesome Kit -->
+  <script src="https://kit.fontawesome.com/917416e9ab.js" crossorigin="anonymous"></script>
 </head>
+
+<!-- body -->
 <body>
-    <h1>This will be a sweets store</h1>
-    <h2>Just a test</h2>
-<!-- linking the javascript file -->
-    <script src="script.js"></script>
+
+  <!-- header -->
+  <header>
+
+    <!-- navbar -->
+    <nav>
+      <ul>
+        <li>
+          <img id="logo" src="./resources/images/logo.bmp" alt="store's logo" title="logo">
+        </li>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Store</a>
+        </li>
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#" class="nav-icon">
+            <i class="fas fa-sign-in-alt"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="nav-icon">
+            <i class="fas fa-phone"></i>
+            <span>+123 456 789</span>
+          </a>
+        </li>
+        <li class="cart-btn">
+          <span class="nav-icon">
+            <i class="fas fa-cart-arrow-down"></i>
+          </span>
+          <div class="cart-items">0</div>
+        </li>
+      </ul>
+    </nav>
+    <!-- end of navbar -->
+
+  </header>
+  <!-- end of header -->
+
+  <!-- main -->
+  <main>
+
+  </main>
+  <!-- end of main -->
+
+  <!-- footer -->
+  <footer>
+
+  </footer>
+  <!-- end of footer -->
+
+  <!-- linking the javascript file -->
+  <script src="script.js"></script>
 </body>
+<!-- end of the body -->
+
 </html>
