added footer styling

--- a/index.html
+++ b/index.html
@@ -186,7 +186,28 @@
     <!-- end of main -->
 
     <!-- footer -->
-    <footer></footer>
+    <footer>
+      <div class="footer-topLine">
+        <div>
+          <p>
+            Delicious Treats crafted with <i class="fas fa-heart"></i> in some city
+          </p>
+        </div>
+        <div class="footer-nav">
+          <ul>
+            <li>Custom Orders</li>
+            <li>Catering</li>
+            <li>Delivery</li>
+          </ul>
+        </div>
+      </div>
+      <div class="social-icons">
+        <i class="fab fa-facebook-square fa-2x"></i>
+        <i class="fab fa-instagram-square fa-2x"></i>
+        <i class="fab fa-twitter-square fa-2x"></i>
+      </div>
+      <span class="copyright">© 2020 Sweet Treats. All rights reserved</span>
+    </footer>
     <!-- end of footer -->
 
     <!-- linking the javascript file -->
