added Complementary font on cards

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@500&&family=Montserrat&display=swap"
       rel="stylesheet"
     />
 
@@ -161,11 +161,11 @@
           <div class="card">
             <img
               class="itemImage"
-              src="https://images.pexels.com/photos/33715/cake-pops-pastries-cake-sweet.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+              src="https://images.pexels.com/photos/3840200/pexels-photo-3840200.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
               alt=""
             />
             <div class="itemName">
-              <p>Cake Pops</p>
+              <p>Chocolate Cake</p>
               <p>10</p>
             </div>
           </div>
