--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
           <div class="card">
             <img
               class="itemImage"
-              src="https://images.pexels.com/photos/808941/pexels-photo-808941.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+              src="https://images.pexels.com/photos/2525682/pexels-photo-2525682.png?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
               alt=""
             />
             <div class="itemName">
-              <p>Macarons</p>
+              <p>Red Velvet Cupcake</p>
               <p>10</p>
             </div>
           </div>
@@ -172,11 +172,11 @@
           <div class="card">
             <img
               class="itemImage"
-              src="https://images.unsplash.com/photo-1486427944299-d1955d23e34d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+              src="https://images.pexels.com/photos/1839882/pexels-photo-1839882.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
               alt=""
             />
             <div class="itemName">
-              <p>Cupcakes</p>
+              <p>Hot Chocolate</p>
               <p>10</p>
             </div>
           </div>
