--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="styles.css" />
     <title>Sweet Treats</title>
 
     <!-- CSS -->
@@ -35,41 +34,42 @@
     <header>
       <!-- navbar -->
       <nav>
-        <ul>
-          <li>
-            <img
-              id="logo"
-              src="./resources/images/logo.bmp"
-              alt="store's logo"
-              title="logo"
-            />
-          </li>
-          <li>
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#">Store</a>
-          </li>
-          <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#" class="nav-icon">
-              <i class="fas fa-sign-in-alt"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="nav-icon">
-              <i class="fas fa-phone"></i>
-              <span>+123 456 789</span>
-            </a>
-          </li>
-          <li class="cart-btn">
-            <span class="nav-icon">
-              <i class="fas fa-cart-arrow-down"></i>
-            </span>
-            <div class="cart-items">0</div>
-          </li>
+        <ul id="hamnav">
+          <label for="hamburger">
+            <i class="fas fa-bars"></i>
+          </label>
+          <input type="checkbox" id="hamburger" />
+          <div id="hamitems">
+            <li>
+              <img id="logo" src="./resources/images/logo.bmp" alt="store's logo" title="logo" />
+            </li>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">Store</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#" class="nav-icon">
+                <i class="fas fa-sign-in-alt"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="nav-icon">
+                <i class="fas fa-phone"></i>
+                <span>+123 456 789</span>
+              </a>
+            </li>
+            <li class="cart-btn">
+              <a href="#" class="nav-icon">
+                <i class="fas fa-cart-arrow-down"></i>
+              </a>
+              <div class="cart-items">0</div>
+            </li>
+          </div>
         </ul>
       </nav>
       <!-- end of navbar -->
@@ -150,11 +150,11 @@
           <div class="card">
             <img
               class="itemImage"
-              src="https://images.pexels.com/photos/2525682/pexels-photo-2525682.png?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+              src="https://images.pexels.com/photos/808941/pexels-photo-808941.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
               alt=""
             />
             <div class="itemName">
-              <p>Red Velvet Cupcake</p>
+              <p>Macarons</p>
               <p>10</p>
             </div>
           </div>
@@ -172,11 +172,11 @@
           <div class="card">
             <img
               class="itemImage"
-              src="https://images.pexels.com/photos/1839882/pexels-photo-1839882.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+              src="https://images.unsplash.com/photo-1486427944299-d1955d23e34d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
               alt=""
             />
             <div class="itemName">
-              <p>Hot Chocolate</p>
+              <p>Cupcakes</p>
               <p>10</p>
             </div>
           </div>
@@ -190,7 +190,8 @@
       <div class="footer-topLine">
         <div>
           <p>
-            Delicious Treats crafted with <i class="fas fa-heart"></i> in some city
+            Delicious Treats crafted with <i class="fas fa-heart"></i> in some
+            city
           </p>
         </div>
         <div class="footer-nav">
