Added hero image, rearranged CSS

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 
     <!-- main -->
     <main>
+      <div id="hero">
+        <img src="./resources/images/2.jpg" alt="">
+      </div>
       <section id="itemsGrid">
         <div class="cards">
           <div class="card">
