Added banner with button, two variables to css. Moved hero image to css.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- header -->
     <header>
       <!-- navbar -->
-      <nav>
+      <nav class="navbar">
         <ul id="hamnav">
           <label for="hamburger">
             <i class="fas fa-bars"></i>
@@ -78,9 +78,14 @@
 
     <!-- main -->
     <main>
-      <div id="hero">
-        <img src="./resources/images/2.jpg" alt="">
+      <!-- hero -->
+      <div class="hero">
+        <div class="banner">
+          <h1 class="banner-title">Welcome to Grandma's</h1>
+          <button class="banner-btn">explore</button>
+        </div>
       </div>
+      <!-- end of hero -->
       <section id="itemsGrid">
         <div class="cards">
           <div class="card">
