Styling changes-footer nav, border changes, nav bar spacing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Sweet Treats</title>
+    <title>Grandma's</title>
 
     <!-- CSS -->
     <link
@@ -14,6 +14,8 @@
       rel="stylesheet"
     />
     <link href="./resources/css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="styles.css" rel="stylesheet" type="text/css" />
+
 
     <!-- Fonts -->
     <link
@@ -82,7 +84,7 @@
       <div class="hero">
         <div class="banner">
           <h1 class="banner-title">Welcome to Grandma's</h1>
-          <button class="banner-btn">explore</button>
+          <button class="banner-btn">Explore</button>
         </div>
       </div>
       <!-- end of hero -->
@@ -204,9 +206,9 @@
         </div>
         <div class="footer-nav">
           <ul>
-            <li>Custom Orders</li>
-            <li>Catering</li>
-            <li>Delivery</li>
+            <li><a class='footer-link' href=>Custom Orders</a></li> 
+            <li ><a class='footer-link' href=>Catering</a></li>
+            <li><a class='footer-link' href=>Delivery</a></li>
           </ul>
         </div>
       </div>
