--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         </div>
       </div>
       <!-- end of hero -->
+      <!-- products -->
       <section id="itemsGrid">
         <div class="cards">
           <div class="card">
@@ -192,6 +193,39 @@
           </div>
         </div>
       </section>
+      <!-- end of products -->
+      <!-- cart -->
+      <div class="cart-overlay">
+        <div class="cart">
+          <span class="close-cart">
+            <i class="fas fa-window-close"></i>
+          </span>
+          <h2>your cart</h2>
+          <div class="cart-content">
+            <!-- cart item -->
+            <div class="cart-item">
+              <img src="https://images.pexels.com/photos/1839882/pexels-photo-1839882.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" 
+              alt="product"/>
+              <div>
+                <h4>hot chocolate</h4>
+                <h5>$4.00</h5>
+                <span class="remove-item">remove</span>
+              </div>
+              <div>
+                <i class="fas fa-chevron-up"></i>
+                <p class="item-amount">1</p>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+            </div>
+          <!-- end of cart item -->
+          </div>
+          <div class="cart-footer">
+            <h3>your total : $ <span class="cart-total">0</span></h3>
+            <button class="clear-cart banner-btn">clear cart</button>
+          </div>
+        </div>
+      </div>
+      <!-- end of cart -->
     </main>
     <!-- end of main -->
 
