--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
         </div>
       </div>
       <!-- end of hero -->
+      <section id='sort-section'>
+        <h2>Our Sweet Treats</h2>
+        <div id='sort-buttons'>
+        <button id="beverages">Beverages</button>
+        <button id="cake">Cakes</button>
+        <button id="cookies">Cookies</button>
+        <button id="cupcakes">Cupcakes</button>
+        <button id="all">View All</button>
+      </div>
+      </section>
       <section id="itemsGrid">
         <div class="cards">
           <div class="card">
