--- a/index.html
+++ b/index.html
@@ -91,106 +91,7 @@
       <!-- products -->
       <section id="itemsGrid">
         <div class="cards">
-          <div class="card">
-            <img
-              class="itemImage"
-              src="https://images.pexels.com/photos/808941/pexels-photo-808941.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-              alt=""
-            />
-            <div class="itemName">
-              <p>Macarons</p>
-              <p>10</p>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              class="itemImage"
-              src="https://images.pexels.com/photos/33715/cake-pops-pastries-cake-sweet.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-              alt=""
-            />
-            <div class="itemName">
-              <p>Cake Pops</p>
-              <p>10</p>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              class="itemImage"
-              src="https://images.unsplash.com/photo-1486427944299-d1955d23e34d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-              alt=""
-            />
-            <div class="itemName">
-              <p>Cupcakes</p>
-              <p>10</p>
-            </div>
-          </div>
-
-          <div class="card">
-            <img
-              class="itemImage"
-              src="https://images.pexels.com/photos/3026810/pexels-photo-3026810.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-              alt=""
-            />
-            <div class="itemName">
-              <p>Parfait</p>
-              <p>10</p>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              class="itemImage"
-              src="https://images.pexels.com/photos/302899/pexels-photo-302899.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-              alt=""
-            />
-            <div class="itemName">
-              <p>Coffee</p>
-              <p>10</p>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              class="itemImage"
-              src="https://images.pexels.com/photos/205961/pexels-photo-205961.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-              alt=""
-            />
-            <div class="itemName">
-              <p>Assorted Pastries</p>
-              <p>10</p>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              class="itemImage"
-              src="https://images.pexels.com/photos/2525682/pexels-photo-2525682.png?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-              alt=""
-            />
-            <div class="itemName">
-              <p>Red Velvet Cupcake</p>
-              <p>10</p>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              class="itemImage"
-              src="https://images.pexels.com/photos/3840200/pexels-photo-3840200.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-              alt=""
-            />
-            <div class="itemName">
-              <p>Chocolate Cake</p>
-              <p>10</p>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              class="itemImage"
-              src="https://images.pexels.com/photos/1839882/pexels-photo-1839882.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-              alt=""
-            />
-            <div class="itemName">
-              <p>Hot Chocolate</p>
-              <p>10</p>
-            </div>
-          </div>
+          <!-- Inject product cards here -->
         </div>
       </section>
       <!-- end of products -->
