Shows cart side menu

--- a/index.html
+++ b/index.html
@@ -104,20 +104,9 @@
           <h2>your cart</h2>
           <div class="cart-content">
             <!-- cart item -->
-            <div class="cart-item">
-              <img src="https://images.pexels.com/photos/1839882/pexels-photo-1839882.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" 
-              alt="product"/>
-              <div>
-                <h4>hot chocolate</h4>
-                <h5>$4.00</h5>
-                <span class="remove-item">remove</span>
-              </div>
-              <div>
-                <i class="fas fa-chevron-up"></i>
-                <p class="item-amount">1</p>
-                <i class="fas fa-chevron-down"></i>
-              </div>
-            </div>
+            <!-- <div class="cart-item">
+              
+            </div> -->
           <!-- end of cart item -->
           </div>
           <div class="cart-footer">
