--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       rel="stylesheet"
     />
     <link href="./resources/css/styles.css" rel="stylesheet" type="text/css" />
-    <link href="styles.css" rel="stylesheet" type="text/css" />
-
+    <link href="styles_DELETE.css" rel="stylesheet" type="text/css" />
 
     <!-- Fonts -->
     <link
