--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <button id="cake">Cakes</button>
         <button id="cookies">Cookies</button>
         <button id="cupcakes">Cupcakes</button>
+        <button id="other">Other</button>
         <button id="all">View All</button>
       </div>
       </section>
@@ -134,7 +135,7 @@
       <div class="footer-topLine">
         <div>
           <p>
-            Delicious Treats crafted with <i class="fas fa-heart"></i> in some
+            Delicious Treats crafted with <i class="fas fa-heart"></i> in a
             city
           </p>
         </div>
