--- a/index.html
+++ b/index.html
@@ -143,9 +143,15 @@
         </div>
       </div>
       <div class="social-icons">
-        <i class="fab fa-facebook-square fa-2x"></i>
-        <i class="fab fa-instagram-square fa-2x"></i>
-        <i class="fab fa-twitter-square fa-2x"></i>
+        <a href="https://www.facebook.com/" target=_blank>
+          <i class="fab fa-facebook-square fa-2x"></i>
+        </a>
+        <a href="https://www.instagram.com/" target=_blank>
+          <i class="fab fa-instagram-square fa-2x"></i>
+        </a>
+        <a href="https://twitter.com/" target=_blank>
+          <i class="fab fa-twitter-square fa-2x"></i>
+        </a>
       </div>
       <span class="copyright">© 2020 Sweet Treats. All rights reserved</span>
     </footer>
