--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="hero">
         <div class="banner">
           <h1 class="banner-title">Welcome to Grandma's</h1>
-          <button class="banner-btn">Explore</button>
+          <a href="#sort-section"><button class="banner-btn">Explore</button></a>
         </div>
       </div>
       <!-- end of hero -->
