added accessibility mode

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- body -->
   <body>
     <!-- header -->
-    <header>
+    <header class=''>
       <!-- navbar -->
       <nav class="navbar">
         <ul id="hamnav">
@@ -56,9 +56,7 @@
               <a href="#">About</a>
             </li>
             <li>
-              <a href="#" class="nav-icon">
-                <i class="fas fa-sign-in-alt"></i>
-              </a>
+              <button id='access-button'>access-mode</button>
             </li>
             <li>
               <a href="#" class="nav-icon">
@@ -90,7 +88,7 @@
       </div>
       <!-- end of hero -->
       <!-- products -->
-      <section id='sort-section'>
+      <section id='sort-section' class=''>
         <h2>Our Sweet Treats</h2>
         <div id='sort-buttons'>
         <button id="beverages">Beverages</button>
@@ -130,7 +128,7 @@
     <!-- end of main -->
 
     <!-- footer -->
-    <footer>
+    <footer class= ''>
       <div class="footer-topLine">
         <div>
           <p>
