Added hovering button, appearing when user starts scrolling the page

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
         </div>
       </div>
       <!-- end of cart -->
+      <a href="#" id="myBtn">
+        <i class="fas fa-chevron-circle-up"></i>
+      </a>
     </main>
     <!-- end of main -->
 
