social icons in access-mode

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <i class="fab fa-twitter-square fa-2x"></i>
         </a>
       </div>
-      <span class="copyright">© 2020 Sweet Treats. All rights reserved</span>
+      <span class="copyright">© 2020 Grandma's. All rights reserved</span>
     </footer>
     <!-- end of footer -->
 
